move/PCI_8164.H

I16 FNTYPE _8164_set_auto_rdp(I16 CardNo,I16 on_off);
void FNTYPE _8164_enable_card_id();
I16 FNTYPE _8164_check_card(I16 CardNo);
U16 FNTYPE _8164_read_axis_di(I16 AxisNo);
I16 FNTYPE _8164_write_axis_do(I16 AxisNo, I16 on_off);
I16 FNTYPE _8164_get_pxi_trigger_value(I16 CardNo, U16 *value);
I16 FNTYPE _8164_set_pxi_trigger_value(I16 CardNo, U16 Value);
I16 FNTYPE _8164_enable_pxi_input(I16 CardNo, I16 STA, I16 STP, I16 CEMG);
I16 FNTYPE _8164_select_pxi_output(I16 CardNo, I16 source, I16 pxi_channel);