move/Pci_8164.vb


	Declare Function B_8164_set_auto_rdp Lib "8164.DLL"  Alias "_8164_set_auto_rdp"(ByVal CardNo As Short, ByVal on_off As Short) As Short
	
	Declare Function B_8164_read_axis_di Lib "8164.DLL"  Alias "_8164_read_axis_di"(ByVal AxisNo As Short) As Short
	Declare Function B_8164_write_axis_do Lib "8164.DLL"  Alias "_8164_write_axis_do"(ByVal AxisNo As Short, ByVal on_off As Short) As Short
	
	Declare Function B_8164_enable_card_id Lib "8164.DLL"  Alias "_8164_enable_card_id"() As Short
	Declare Function B_8164_check_card Lib "8164.DLL"  Alias "_8164_check_card"(ByVal CardNo As Short) As Short
	Declare Function B_8164_get_pxi_trigger_value Lib "8164.DLL"  Alias "_8164_get_pxi_trigger_value"(ByVal CardNo As Short, ByRef Value As Short) As Short
	Declare Function B_8164_set_pxi_trigger_value Lib "8164.DLL"  Alias "_8164_set_pxi_trigger_value"(ByVal CardNo As Short, ByVal Value As Short) As Short
	Declare Function B_8164_enable_pxi_input Lib "8164.DLL"  Alias "_8164_enable_pxi_input"(ByVal CardNo As Short, ByVal STA As Short, ByVal STP As Short, ByVal CEMG As Short) As Short
	Declare Function B_8164_select_pxi_output Lib "8164.DLL"  Alias "_8164_select_pxi_output"(ByVal CardNo As Short, ByVal source As Short, ByVal pxi_channel As Short) As Short
End Module